<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".VerifyOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="146dp"
            android:layout_height="138dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/received" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/enter_the_otp_send"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textmoblie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            android:textStyle="bold"/>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputcode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="4dp" />
            <EditText
                android:id="@+id/inputcode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="4dp" />
            <EditText
                android:id="@+id/inputcode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="4dp" />
            <EditText
                android:id="@+id/inputcode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="4dp" />
            <EditText
                android:id="@+id/inputcode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="4dp" />
            <EditText
                android:id="@+id/inputcode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="4dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_not_receive_the_otp"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textresendotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resend_otp"
                android:textColor="@color/purple_200"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonverify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/background_button"
            android:text="@string/verfiy"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"/>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>
    </LinearLayout>
</ScrollView>